move index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -352,7 +352,7 @@
                 <li><strong>Include token</strong> in <code>Authorization: Bearer &lt;token&gt;</code> header for authenticated endpoints</li>
                 <li><strong>All responses</strong> use <code>ApiResponse&lt;T&gt;</code> wrapper with <code>{status, data, timestamp, message}</code></li>
             </ol>
-            <p><strong>Base URL:</strong> <code>https://your-domain.com/api</code></p>
+            <p><strong>Base URL:</strong> <code>https://web-production-8a8d.up.railway.app/api</code></p>
         </section>
 
         <section id="models" class="section" data-api-section="models">
