--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
  Licensed under the MIT license.
  https://github.com/ticlekiwi/API-Documentation-HTML-Template
  
- Customized for Aquarium Manager API
+ Customized for Aquarium Manager API with Dark Mode Support
  !-->
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -28,6 +28,12 @@
 </head>
 
 <body>
+<!-- Dark Mode Toggle Button -->
+<button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+    <span class="theme-icon">🌓</span>
+    <span class="theme-text">Dark Mode</span>
+</button>
+
 <div class="left-menu">
     <div class="content-logo">
         <div class="logo">
